# TestSystemC

./: CMakeLists.txt
include/: Initiator.h  KGC.h  NA.h  Target.h  TopLevel.h
src/: Initiator.cpp  KGC.cpp  NA.cpp  Target.cpp  TopLevel.cpp  main.cpp
